update canvas sizing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <canvas #canvas class="Canvas"></canvas>
+  <canvas #canvas id="canvas" class="canvas"></canvas>
 </div>
 <div class="grid-container">
   <div class="grid-item">
