--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,9 +9,8 @@
 }
 
 .canvas {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  height: 100%;
+  width: 100%;
 }
 
 .grid-container {
